font alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ html {
 }
 .about-section--tittle h2 {
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
 }
 .about-section--desc p {
   line-height: 25px;
@@ -342,7 +342,7 @@ html {
   position: relative;
   transform: translateY(150px);
   opacity: 0;
-  transition: all 1s ease;
+  transition: all 2s ease;
 }
 
 .reveal.active {
@@ -476,7 +476,7 @@ html {
 }
 .service-section-tittle h2 {
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
 }
 
 .service-section-tittle p {
@@ -740,10 +740,6 @@ html {
   transition: all 0.8s ease;
 }
 
-.nav-toggler {
-  display: none;
-}
-
 .nav-ion {
   color: #000;
 }
@@ -756,10 +752,6 @@ html {
 }
 
 .mobile-btn {
-  display: none;
-}
-
-.hidden {
   display: none;
 }
 
@@ -796,6 +788,10 @@ html {
 
   .nav-toggle {
     display: block;
+  }
+
+  .hidden {
+    display: none;
   }
 
   .brand {
@@ -1008,6 +1004,10 @@ html {
     margin-top: 10px;
   }
 
+  .about-section--tittle h2 {
+    font-size: 1.3rem;
+  }
+
   .work-section-items {
     display: flex;
     /* justify-content: center; */
@@ -1077,6 +1077,12 @@ html {
     font-size: 0.6rem;
   }
 
+  .service-section-tittle p {
+    font-size: 0.6rem;
+  }
+  .service-section-tittle h2 {
+    font-size: 1.3rem;
+  }
   .contact-card {
     display: flex;
     flex-direction: column;
@@ -1118,6 +1124,10 @@ html {
     font-size: 15px;
     font-weight: 300;
     margin-left: 5%;
+  }
+
+  .work-section h2 {
+    font-size: 1.3rem;
   }
 
   .work-desc--tittle h6 {
